# lzt-testnet

./: .env.example  .gitignore  .pre-commit-config.yaml  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.plans/testnet-gauntlet/: 00-audit.md  00-decisions.md  00-improvements.md  00-overview.md  01-logic.md  02-files.md  03-types.md  04-tasks.yaml  05-risks.md  06-review.md  06-test-strategy.md  07-verification.md
docs/: gauntlet.md
docs/for_ai/: index.en.md  index.md
scenarios/: README.md  auth-expiry-storm.yaml  black-friday-meltdown.yaml  nginx-down.yaml  pagination-hell.yaml  seller-spam-flood.yaml
scripts/: gauntlet-soak.sh  reset.sh  run.sh
src/lzt_testnet/: __init__.py  cli.py  config.py  errors.py  pytest_plugin.py
src/lzt_testnet/api/: __init__.py  app.py  catch_all.py  control.py  dependencies.py  error_handlers.py  forum.py  stateful.py
src/lzt_testnet/catalog/: __init__.py  registry.py  route_table.py
src/lzt_testnet/chaos/: __init__.py  domain.py  faults.py  legacy.py  middleware.py  planner.py  profiles.py  render.py  report.py  scenario.py  seed.py
src/lzt_testnet/fake/: __init__.py  generator.py  query_filters.py
src/lzt_testnet/state/: __init__.py  lot_store.py  payment_store.py  scenario_store.py
src/lzt_testnet/world/: arm.py  builder.py  materializer.py  models.py  stores.py
tests/: conftest.py  test_all_methods_e2e.py  test_all_methods_roundtrip.py  test_app_factory.py  test_catalog_registry.py  test_conftest_fixture.py  test_control_routes.py  test_dependencies.py  test_error_handlers.py  test_error_injection.py  test_fake_generator.py  test_lztforge_client_smoke.py  test_payments_feed.py  test_pytest_plugin.py  test_route_table.py  test_state_stores.py  test_stateful_lot_lifecycle.py  test_stateless_roundtrip.py  test_unwrap_envelope.py
tests/chaos/: test_cli.py  test_domain_faults.py  test_idempotency.py  test_middleware.py  test_off_no_drift.py  test_oracle.py  test_planner.py  test_profiles.py  test_render.py  test_report.py  test_scenario.py  test_seed.py
tests/helpers/: gauntlet.py
tests/world/: test_blacklist.py  test_builder.py  test_forum_api.py  test_materializer.py  test_stores.py
