[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lzt-testnet"
version = "0.1.0"
description = "Mock FastAPI server for the lzt.market API surface, for offline testing against pylzt."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "polyfactory>=2.18",
    "pylzt",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv.sources]
pylzt = { git = "https://github.com/open-lzt/pylzt.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/lzt_testnet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
