[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lzt-testnet"
version = "0.1.0"
description = "Mock FastAPI server for the lzt.market API surface, for offline testing against pylzt."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "polyfactory>=2.18",
    "pyyaml>=6.0",
    # The pytest11 plugin (testnet_client fixture) auto-loads on any pytest run, so its imports
    # must always resolve — even on a bare `lzt-testnet` install without [dev]. Hence base, not dev.
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
    "pylzt",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.entry-points.pytest11]
lzt_testnet = "lzt_testnet.pytest_plugin"

[tool.uv.sources]
pylzt = { git = "https://github.com/open-lzt/pylzt.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/lzt_testnet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["tests/"]

# types-PyYAML (dev dep) provides real stubs in CI; this keeps a stub-less local run green too.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Repo root on sys.path so tests can `from tests.helpers.gauntlet import ...` (tests/ is a
# namespace package — no __init__.py); importlib mode keeps it off the sys.path-prepend games.
pythonpath = ["."]
addopts = "--import-mode=importlib"
